--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,16 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [['$','$'], ['\\(','\\)']],
+          processEscapes: true
+        }
+      });
+      </script>
   </head>
 
   <body>
